fea: se continúa con la documentación de api
